# sidereon-python

./: .gitattributes  .gitignore  CHANGELOG.md  COVERAGE.md  Cargo.toml  README.md  REPORT.md  THIRD-PARTY-NOTICES.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
bench/: README.md  bench_fleet.py
docs/: public-gnss-distribution-sources.md
examples/: clean_a_phone_track.ipynb  static_occupation_vs_cors.ipynb
python/sidereon/: __init__.py  __init__.pyi  _compression.py  _exact_cache.py  _ingress.py  data.py  data.pyi  distribution.py  distribution.pyi  exact_cache.py  exact_cache.pyi  exact_sp3.py  exact_sp3.pyi  ntrip.py  ntrip.pyi
scripts/: check-release.py  smoke-release.py
src/: almanac.rs  angles.rs  anomaly.rs  araim.rs  atmosphere.rs  bias.rs  bodies.rs  body_observe.rs  broadcast_comparison.rs  cdm.rs  clock_stability.rs  conjunction.rs  constellation.rs  covariance.rs  coverage.rs  data_catalog.rs  defaults.rs  dgnss.rs  doppler.rs  elements.rs  emission.rs  ephemeris.rs  equinoctial.rs  error_metrics.rs  estimation.rs  events.rs  exact_cache.rs  fallback.rs  forces.rs  frame_catalog.rs  frames.rs  fusion.rs  geodesic.rs  geodetic_time_series.rs  geofence.rs  geoid.rs  geometry.rs  geometry_quality.rs  ils.rs  iod.rs  (+47 more)
tests/: _helpers.py  test_012_bindings.py  test_013_bindings.py  test_014_bindings.py  test_015_bindings.py  test_016_wave2_bindings.py  test_017_domain_exposure.py  test_018_domain_exposure.py  test_019_track.py  test_020_error_metrics.py  test_antex.py  test_atmosphere.py  test_batch.py  test_broadcast_comparison.py  test_broadcast_fallback.py  test_cdm.py  test_conjunction.py  test_constellation.py  test_constellation_fleet.py  test_core_defaults.py  test_core_public_api_parity.py  test_covariance.py  test_covariance_propagation.py  test_coverage.py  test_crinex.py  test_data.py  test_dgnss.py  test_distribution.py  test_distribution_fallback.py  test_dop_at_epoch.py  test_dop_convention.py  test_doppler.py  test_egm96.py  test_elements.py  test_events_bodies_dop.py  test_exact_cache_atomicity.py  test_field_mode_bindings.py  test_forces.py  test_frames_time.py  test_geoid.py  (+58 more)
tests/fixtures/: README.md  batch_fleet.json  cdm.json  frames_time.json  ppp_esbc.json
tests/fixtures/constellation/: navcen_forecast_cases.html
tests/fixtures/gnss_data/: igs22376.sp3.Z.b64  ncompress-current-b9-counter.Z.b64
tests/fixtures/sp3/: IGS0OPSFIN_20261200945_02H30M_15M_ORB.SP3
